---------------------------------------------------------------------------------------------------
Version: 0.9.12
Date: 09. 05. 2019
  Added:
    - Ability to select Empty barrel icon when placing signs
---------------------------------------------------------------------------------------------------
Version: 0.9.11
Date: 29. 04. 2019
  Added:
    - Signal color support for Sulfur and KS Power mod's Diesel fuel fluid
    - Ability to craft red and brown tree variants
  Changed:
    - Updated Concrete wall icons to match 0.17 style
  Locales:
    - Updated Czech translation (thanks to Treij)
    - Updated Russian translation (thanks to 1avek1)
---------------------------------------------------------------------------------------------------
Version: 0.9.10
Date: 29. 03. 2019
  Added:
    - Detection of Arborium mod so that tree crafting is handled using its mechanics, not Dectorio's
  Changed:
    - Added Thaumaturgic Machinations to list of incompatible mods
---------------------------------------------------------------------------------------------------
Version: 0.9.9
Date: 25. 03. 2019
  Changed:
    - Added support for new pollution model introduced in 0.17.12
  Locales:
    - Updated German translation (thanks to lpzockerx and LastDawn)
    - Updated Spanish translation (thanks to notallme)
---------------------------------------------------------------------------------------------------
Version: 0.9.8
Date: 19. 03. 2019
  Added:
    - Lawnmower can now be used to remove corpses by invoking alternate selection mode (by default, by holding down SHIFT key when selecting an area)
    - New setting to adjust walking and vehicle speeds of Painted concrete by a custom amount, allowing concrete to be used as a safety barrier around hazards (by default, this option is off)
  Locales:
    - Updated German translation (thanks to LastDawn)
    - Updated Spanish translation (thanks to notallme)
    - Updated Portuguese, Brazilian translation (thanks to celaquila)